--- a/prepros.config
+++ b/prepros.config
@@ -493,11 +493,11 @@
           "segments": [
             {
               "segment": "scss",
-              "replaceWith": "css"
+              "replaceWith": "../../css"
             },
             {
               "segment": "sass",
-              "replaceWith": "css"
+              "replaceWith": "../../css"
             }
           ]
         }
@@ -912,6 +912,11 @@
       {
         "file": "#source/index.kit",
         "config": {
+          "tasks": {
+            "minify-html": {
+              "enable": true
+            }
+          },
           "customOutput": "index.html"
         }
       },
@@ -952,7 +957,12 @@
       {
         "file": "#source/scss/index.scss",
         "config": {
-          "customOutput": "css\\index.css"
+          "customOutput": "css\\index.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
         }
       },
       {
